syntax = "proto3";

package chef.automate.domain.infra_proxy.response;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/response";

message CreateServer {
    // Chef Infra Server.
    Server server = 1;
}

message DeleteServer {
    // Chef Infra Server.
    Server server = 1;
}

message UpdateServer {
    // Chef Infra Server.
    Server server = 1;
}

message GetServers {
    // List of Chef Infra Servers.
    repeated Server servers = 1;
}

message GetServer {
    // Chef Infra Server.
    Server server = 1;
}

message Server {
    // Chef Infra Server ID.
    string id = 1;
    // Chef Infra Server name.
    string name = 2;
    // Chef Infra Server FQDN.
    string fqdn = 4;
    // Chef Infra Server IP address.
    string ip_address = 5;
    // Chef organizations count associated with Chef Infra Server.
    int32 orgs_count = 6;
    //Migration Id for active Chef Infra server migration
    string migration_id = 7;
    //Migration type for active Chef Infra server migration
    string migration_status =8;
}

message GetServerStatus {
    // Chef Server Status
    string status = 1;
    // Chef Server Upstream
    map<string, string> upstreams = 2;
    // Chef Server Keygem
    map<string, int32> keygen = 3;
}

message ValidateWebuiKey {
    // Webui key is valid or not
    bool valid = 1;
    // webui key validation errors
    string error = 2;
}

message UpdateWebuiKey {
}
